Bug 316285 - Places windows cann't open in left panel
Summary: Places windows cann't open in left panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (show other bugs)
Version: 2.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 08:13 UTC by hyunabi
Modified: 2013-04-23 17:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 4.10.3


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hyunabi 2013-03-07 08:13:46 UTC
Application: dolphin (2.2)
KDE Platform Version: 4.10.1
Qt Version: 4.8.4
Operating System: Linux 3.8.0-11-generic i686
Distribution: Ubuntu Raring Ringtail (development branch)

-- Information about the crash:
- What I was doing when the application crashed:
I had clicked menu-view-Panels-Places, then Dolphin have crashed. 
When I have typed F9(the Shortcut for the opening of Places in the left panel), the same problem occured.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb1b08740 (LWP 4191))]

Thread 3 (Thread 0xaf027b40 (LWP 4193)):
#0  0xb4ae75b2 in g_private_get () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb4ac9744 in g_thread_self () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4aa375f in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb588ac3f in QEventDispatcherGlib::processEvents (this=0xae700468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0xb58573ec in QEventLoop::processEvents (this=this@entry=0xaf027228, flags=...) at kernel/qeventloop.cpp:149
#5  0xb58576e1 in QEventLoop::exec (this=0xaf027228, flags=...) at kernel/qeventloop.cpp:204
#6  0xb5742fec in QThread::exec (this=0x9abd540) at thread/qthread.cpp:542
#7  0xb5836f2d in QInotifyFileSystemWatcherEngine::run (this=0x9abd540) at io/qfilesystemwatcher_inotify.cpp:256
#8  0xb5745b18 in QThreadPrivate::start (arg=0x9abd540) at thread/qthread_unix.cpp:338
#9  0xb4b7cd78 in start_thread (arg=0xaf027b40) at pthread_create.c:311
#10 0xb75d73de in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:131

Thread 2 (Thread 0xadb30b40 (LWP 4194)):
#0  0xb7755424 in __kernel_vsyscall ()
#1  0xb75c7dcb in poll () at ../sysdeps/unix/syscall-template.S:81
#2  0xb4ab224b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb4aa3610 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4aa3771 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb588ac3f in QEventDispatcherGlib::processEvents (this=0xad200468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0xb58573ec in QEventLoop::processEvents (this=this@entry=0xadb30228, flags=...) at kernel/qeventloop.cpp:149
#7  0xb58576e1 in QEventLoop::exec (this=0xadb30228, flags=...) at kernel/qeventloop.cpp:204
#8  0xb5742fec in QThread::exec (this=0x9ad0410) at thread/qthread.cpp:542
#9  0xb5836f2d in QInotifyFileSystemWatcherEngine::run (this=0x9ad0410) at io/qfilesystemwatcher_inotify.cpp:256
#10 0xb5745b18 in QThreadPrivate::start (arg=0x9ad0410) at thread/qthread_unix.cpp:338
#11 0xb4b7cd78 in start_thread (arg=0xadb30b40) at pthread_create.c:311
#12 0xb75d73de in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:131

Thread 1 (Thread 0xb1b08740 (LWP 4191)):
[KCrash Handler]
#7  QList (l=<error reading variable: Cannot access memory at address 0x4>, this=0xbfdde994) at ../../include/QtCore/../../src/corelib/tools/qlist.h:122
#8  QGraphicsScene::views (this=0x0) at graphicsview/qgraphicsscene.cpp:3332
#9  0xb731793b in rect (this=0x9f296a8, child=<optimized out>) at ../../../dolphin/src/kitemviews/kitemlistviewaccessible.cpp:245
#10 KItemListViewAccessible::rect (this=0x9f296a8, child=22) at ../../../dolphin/src/kitemviews/kitemlistviewaccessible.cpp:239
#11 0x00000000 in ?? ()

Reported using DrKonqi
Comment 1 Frank Reininghaus 2013-03-07 09:40:32 UTC
Thanks for the bug report. Looks like the crash happens in accessibility-related code. Do you use any accessibility-related tools (like KWin's zoom plugin)?

It seems that the crashing line in "QRect KItemListViewAccessible::rect(int child) const" is

const QPoint origin = view()->scene()->views()[0]->mapToGlobal(QPoint(0, 0));

@Frederik: I did not know if any of the "Amandeep Singh" that Bugzilla knows is the right one.
Comment 2 Frank Reininghaus 2013-04-23 17:27:10 UTC
Git commit f8bf257734885fbf1f61e2aebb283998eddc3a7d by Frank Reininghaus.
Committed on 23/04/2013 at 19:25.
Pushed by freininghaus into branch 'KDE/4.10'.

Do not dereference null pointer in KItemListViewAccessible
FIXED-IN: 4.10.3

M  +9    -3    dolphin/src/kitemviews/kitemlistviewaccessible.cpp

http://commits.kde.org/kde-baseapps/f8bf257734885fbf1f61e2aebb283998eddc3a7d