Do not dereference null pointer in KItemListViewAccessible

BUG: 316285
FIXED-IN: 4.10.3